--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Listing Server</title>
+        <link rel="stylesheet" href="styles.css">
+
     </head>
     <body>
 
