--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <title>Listing Server</title>
-        <link rel="stylesheet" href="styles.css">
+        <style>
+            body {background-color: powderblue;}
+            h1   {color: blue;}
+            p    {color: red;}
+        </style>
 
     </head>
-    <body>
+    <body >
 
         <p> <h1>A smart <strong>listing</strong> server for you.</h1></p>
 
