--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Listing Server</title>
-        <style>
-            body {background-color: powderblue;}
-            h1   {color: blue;}
-            p    {color: red;}
-        </style>
-
+        <title>wbat you looking for rick?</title>
     </head>
     <body >
 
@@ -27,6 +21,7 @@
         <div>
             There are more things to consider before you step out in the world, friend.
         </div>
+        <img src="https://source.unsplash.com/daily">
 
     </body>
 </html> 
