--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
             There are more things to consider before you step out in the world, friend.
         </div>
-        <img src="https://source.unsplash.com/daily">
+        <img src="https://source.unsplash.com/1920x1080/?nature,water,moon">
 
     </body>
 </html> 
