--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </head>
 
     <body>
-        <a href="https://discord.gg/sBr23Eb"><h1>You dare click this rick</h1></a>
+        <a href="https://discord.gg/otakudesu"><h1>join or.. i mean please join</h1></a>
+        <iframe src="https://discordapp.com/widget?id=729886379462492190&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </body>
 
     
